# dark-trifid

./: .gitignore  ADAPTATION-GUIDE.md  CI-CD-GUIDE.md  CI-CD-SUMMARY.md  DATABASE-GUIDE.md  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-VALIDATION.md  Dockerfile  ELASTIC-IP-GUIDE.md  GIT-FLOW-GUIDE.md  INFRASTRUCTURE-GUIDE.md  LEARNING-GUIDE.md  PORT-CHANGE-GUIDE.md  README.md  STAGING-SETUP-GUIDE.md  aws-cli-launch.sh  docker-compose.prod.yml  docker-compose.yml  ec2-user-data.sh  main.py  pyproject.toml  setup-ec2.sh
.github/workflows/: deploy-staging.yml  deploy.yml  emergency-cleanup.yml  full-stack.yml  infrastructure.yml  pr-checks.yml  setup-ecr.yml
backend/: Dockerfile  main.py  pyproject.toml  routes.py
backend/services/: catalog_service.py
database/: repository.py
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
scripts/: build-and-push.sh  cleanup-aws-resources.sh  setup-ec2-for-ecr.sh  setup-ecr.sh
services/: catalog_service.py
terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  user-data.sh
web/: routes.py
web/templates/: base.html  index.html
