[tool.poetry]
name = "google-cloud-conference"
version = "0.1.0"
description = "Sitio web informativo para una conferencia técnica de Google Cloud"
authors = ["Antigravity <antigravity@google.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
