[tool.poetry]
name = "google-cloud-conference"
description = "Sitio web informativo para Google Cloud Tech Week 2028"
authors = ["Luinos <luizapata190@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
